# PP_HED

./: .gitignore  CMakeLists.txt  CMakePresets.json
applications/: CMakeLists.txt
applications/HW1/: CMakeLists.txt  HW1.cpp
include/: ButcherTableau.hpp  Common.hpp  LinearAlgebra.hpp
src/: ButcherTableau.cpp  CMakeLists.txt
